add_library(TLibCommon
    AccessUnit.h
    NAL.h
    CommonDef.h
    TComBitCounter.h
    TComList.h
    TComMv.h
    TypeDef.h
    ContextModel.cpp ContextModel.h
    ContextModel3DBuffer.cpp ContextModel3DBuffer.h
    ContextTables.h
    SEI.cpp SEI.h
    TComBitStream.cpp TComBitStream.h
    TComCABACTables.cpp TComCABACTables.h
    TComDataCU.cpp TComDataCU.h
    TComInterpolationFilter.cpp TComInterpolationFilter.h
    TComLoopFilter.cpp TComLoopFilter.h
    TComMotionInfo.cpp TComMotionInfo.h
    TComPattern.cpp TComPattern.h
    TComPic.cpp TComPic.h
    TComPicSym.cpp TComPicSym.h
    TComPicYuv.cpp TComPicYuv.h
    TComPicYuvMD5.cpp
    TComPrediction.cpp TComPrediction.h
    TComRdCost.cpp TComRdCost.h
    TComRdCostWeightPrediction.cpp TComRdCostWeightPrediction.h
    TComRom.cpp TComRom.h
    TComSampleAdaptiveOffset.cpp TComSampleAdaptiveOffset.h
    TComSlice.cpp TComSlice.h
    TComTrQuant.cpp TComTrQuant.h
    TComWeightPrediction.cpp TComWeightPrediction.h
    TComYuv.cpp TComYuv.h)
